# $Id$

2006-01-26	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/OSQL/InsertOrUpdateQuery.class.php: setId() renamed to
	lazySet() to avoid collision with Query interface.

	* core/OSQL/: support for table creation added.

2006-01-25	Sveta Smirnova		<sveta@microbecal.com>

	* core/OSQL/: schema's support introduced in several common cases.

2006-01-25	Igor V. Gulyaev		<igor_vg@mail.ru>

	* core/Form/PrimitiveDate.class.php: seconds support fixed for complex
	imports.

2006-01-25	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* test/: first SimpleTest-based tests. Baden. Baden.

2006-01-23	Anton E. Lebedevich	<noiselist@pochta.ru>

	* core/OSQL/FromTable.class.php: SQLFunction support added.

2006-01-22	Anton E. Lebedevich	<noiselist@pochta.ru>

	* main/Base/Calendar*: calendar helper classes added. 

2006-01-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Base/ObjectsTree.class.php, core/Base/Range.class.php,
	core/Base/DateRange.class.php: moved to main/Base/.

	* global.inc.php.tpl: new ONPHP_TEMP_PATH constant defines storing
	place for temporary stuff like locking files/directories, cache files,
	etc.

	* core/cache/: SemaphorePool ported to worker-based approach,
	available workers - System-V semaphores, local file (flock()) and
	directories (mkdir()).

	* core/Cache/RubberFileSystem.class.php: explicit file locking
	removed.

	* main/DAOs/: minor speed up's.

	* main/DAOs/SmartDaoWorker.class.php: fixed giv's lovely 'index
	page'-bug (racy uncacheLists()).

2006-01-21	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Base/Singletone.class.php: reworked and simplified,
	SingletoneException dropped.

2006-01-19	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/: removed unneeded wrapper in DAO-workers.

	* core/Cache/PeclMemcached.class.php: connector for PECL's memcache
	extension.

	* core/, main/: removed sizeof() abusing in for() loops.

	* core/DB/Dialect.class.php, core/OSQL/FromTable.class.php: table's