@@ -1,5 +1,10 @@
 # $Id$
 
+2006-01-27	Konstantin V. Arkhipov	<voxus@shadanakar.org>
+
+	* core/OSQL/: implemented auto-increment columns generation for PgSQL,
+	MySQL, IBase and SQLite.
+
 2006-01-26	Konstantin V. Arkhipov	<voxus@shadanakar.org>
 
 	* core/OSQL/InsertOrUpdateQuery.class.php: setId() renamed to
